--- a/app/app.css
+++ b/app/app.css
@@ -5,11 +5,29 @@
 
 
 .fab-button {
-    height: 70;
-    width: 70;
-    margin: 30;
+    height: 50;
+    width: 50;
+    margin: 55 20;
     color: #FFF;
     background-color: #ff4081;
     horizontal-align: right;
+    vertical-align: bottom;
+}
+
+.to-my-location {
+    height: 50;
+    width: 50;
+    margin: 120 20;
+    color: #2d2d2d;
+    background-color:#FFF;
+    horizontal-align: right;
+    vertical-align: bottom;
+}
+
+.cardStyle {
+    background-color: #ffffff;
+    color: #0d0d0d;
+    height: 80;
+    width: 100%;
     vertical-align: bottom;
 }
